# velvet-bot

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260101_0000_init.py  20260102_0000_price_overrides.py
assets/: README.md
src/bot/: __init__.py  app.py  config.py  logger.py  texts.py
src/bot/database/: __init__.py  base.py  models.py  repository.py  session.py
src/bot/filters/: admin.py
src/bot/handlers/: __init__.py  admin.py  errors.py  payment.py  start.py  subscription.py
src/bot/keyboards/: __init__.py  admin.py  callbacks.py  user.py
src/bot/middlewares/: database.py  throttling.py
src/bot/scheduler/: __init__.py  tasks.py
src/bot/services/: __init__.py  channel.py  cryptobot.py  pricing.py  subscription.py
src/bot/states/: __init__.py  admin.py
src/bot/web/: __init__.py  webhook.py
tests/: conftest.py  test_config.py  test_cryptobot_signature.py  test_pricing_service.py  test_repositories.py  test_subscription_service.py  test_texts.py  test_throttling.py
